[project]
name = "powernoisesuite"
description = "Power Noise Suite contains nodes centered around latent noise input, and diffusion, as well as latent adjustments."
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = ["torch"]

[project.urls]
Repository = "https://github.com/WASasquatch/PowerNoiseSuite"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "was"
DisplayName = "PowerNoiseSuite"
Icon = ""
